Updated examples (Kotlin 1.5.31, JDK 1.8)